# cursor-for-spreadsheet-mvp

./: .cursorrules  .gitignore  AGENT_IMPROVEMENTS.md  FEATURES.md  GOAL.md  README.md
.cursor/plans/: INDEX.md  agent-preview-abort-loop.plan.md  agent-step-enhancement_95f11d59.plan.md  apply_后新列为空根因与修复_bd9d85c4.plan.md  langgraph-pydantic-ai-migration.plan.md  langgraph-three-subagents-migration.plan.md  spreadsheet-cursor-roadmap_66f6c3b6.plan.md  spreadsheet-mvp-interview-enhancements_a32a1185.plan.md  spreadsheet-plan-step-types-reference.plan.md
client/: index.html  package-lock.json  package.json
docs/: agent-improvements.md  features.md  goals.md
server/: .env  .env.example  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  logging_config.py  main.py
server/app/agent/: __init__.py  base_agent.py  decision.py  orchestrator.py  state.py
server/app/agent/sub_agents/: context_analyzer.py  intent_analyzer.py  plan_generator.py
server/app/agents/: base_agent.py
server/app/agents/sub_agents/: context_analyzer.py  intent_analyzer.py  plan_generator.py
server/app/api/routes/: agent.py  chat.py  config.py  export.py  load.py  plan.py
server/app/models/: __init__.py  agent_models.py  chat.py  plan.py  table_models.py  user_intent.py
server/app/services/: __init__.py  chat_history.py  llm.py  plan_executor.py  projects.py  prompt_content.py  prompts.py  tools.py
server_py/: .env.example  .gitignore  main.py  requirements.txt
test-data/: sample.xlsx  test-prompts.md
(+29 files in other folders)
