[project]
name = "spreadsheet-cursor-server"
version = "0.1.0"
description = "FastAPI backend for Cursor for Spreadsheet MVP."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
]

# Application project: only manage third-party deps; do not build/install a wheel.
[tool.uv]
package = false
